--- a/src/naive-client/Dockerfile
+++ b/src/naive-client/Dockerfile
@@ -8,7 +8,8 @@ RUN (apt update && apt install -y wget xz-utils libnss3 binutils && rm -rf /var/
  && (yes | apt upgrade) \
  && mkdir -p /etc/naiveproxy /var/log/naive \
  && chmod +x /root/naive.sh \
- && /root/naive.sh "${TARGETPLATFORM}"
+ && /root/naive.sh "${TARGETPLATFORM}" \
+ && rm -fv /root/naive.sh
 
 VOLUME /etc/naiveproxy
 CMD [ "/usr/bin/naive", "/etc/naiveproxy/config.json" ]
