--- a/src/xray/Dockerfile
+++ b/src/xray/Dockerfile
@@ -9,7 +9,8 @@ RUN set -ex \
 	&& apk add --no-cache tzdata ca-certificates \
 	&& mkdir -p /etc/xray /var/log/xray \
 	&& chmod +x /root/xray.sh \
-	&& /root/xray.sh "${TARGETPLATFORM}"
+	&& /root/xray.sh "${TARGETPLATFORM}" \
+	&& rm -fv /root/xray.sh
 
 VOLUME /etc/xray
 CMD [ "/usr/bin/xray", "run", "-config", "/etc/xray/config.json" ]
