--- a/.github/workflows/trojan-r.yml
+++ b/.github/workflows/trojan-r.yml
@@ -74,7 +74,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
           push: true
           tags: |
             ${{ secrets.DOCKER_USERNAME }}/trojan-r:latest
