use buster-slim instead

--- a/src/naive-client/Dockerfile
+++ b/src/naive-client/Dockerfile
@@ -1,4 +1,4 @@
-FROM --platform=${TARGETPLATFORM} debian:latest
+FROM --platform=${TARGETPLATFORM} debian:buster-slim
 
 WORKDIR /root
 ARG TARGETPLATFORM
