update Xray to v1.3.0

--- a/src/xray/Dockerfile
+++ b/src/xray/Dockerfile
@@ -7,7 +7,7 @@ COPY config.json /etc/xray/config.json
 
 RUN set -ex \
 	&& apk add --no-cache tzdata ca-certificates \
-	&& mkdir -p /etc/xray /var/log/xray \
+	&& mkdir -p /var/log/xray /usr/local/share/xray \
 	&& chmod +x /root/xray.sh \
 	&& /root/xray.sh "${TARGETPLATFORM}" \
 	&& rm -fv /root/xray.sh
