--- a/.github/workflows/naive.yml
+++ b/.github/workflows/naive.yml
@@ -1,7 +1,7 @@
 on:
   push:
     paths:
-      - 'version/naive'
+      - 'version/naive.txt'
 
 name: naive
 jobs:
@@ -15,7 +15,7 @@ jobs:
       - name: Setup variables
         run: |
           echo "GOLANG=$(wget -qO- https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | grep 'version' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
-          echo "VERSION=$(cat "version/naive" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/naive.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
           echo "GOPATH=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
           echo "$(dirname $GITHUB_WORKSPACE)/bin" >> $GITHUB_PATH
         shell: bash
@@ -43,7 +43,7 @@ jobs:
 
   push:
     needs: build
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-18.04
     steps:
       
       - name: Checkout
@@ -51,7 +51,7 @@ jobs:
       
       - name: Setup variables
         run: |
-          echo "VERSION=$(cat "version/naive" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/naive.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Get Dockerfile
@@ -90,7 +90,7 @@ jobs:
       
       - name: Setup variables
         run: |
-          echo "VERSION=$(cat "version/naive" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/naive.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Test Docker image
