--- a/.github/workflows/xray.yml
+++ b/.github/workflows/xray.yml
@@ -1,7 +1,7 @@
 on:
   push:
     paths:
-      - 'version/xray'
+      - 'version/xray.txt'
 
 name: xray
 jobs:
@@ -15,7 +15,7 @@ jobs:
       - name: Set Env
         run: |
           echo "GOLANG=$(wget -qO- https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | grep 'version' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
-          echo "VERSION=$(cat "version/xray" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/xray.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Install Golang
@@ -49,7 +49,7 @@ jobs:
 
       - name: Set variables
         run: |
-          echo "VERSION=$(cat "version/xray" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/xray.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Get Dockerfile
@@ -88,7 +88,7 @@ jobs:
 
       - name: Set variables
         run: |
-          echo "VERSION=$(cat "version/xray" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/xray.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Test Docker image
