compile trojan-gfw on windows

--- a/.github/workflows/trojan.yml
+++ b/.github/workflows/trojan.yml
@@ -5,6 +5,55 @@ on:
 
 name: trojan
 jobs:
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Set variables
+        run: |
+          echo "RELEASE_VERSION=$(cat "version/trojan.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(wget -qO- https://api.github.com/repos/trojan-gfw/trojan/tags | grep 'name' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
+        shell: bash
+        
+      - name: Install boost
+        uses: MarkusJx/install-boost@v1.0.1
+        id: install-boost
+        with:
+          # Using Supported Boost Version Below (with msvc on Windows)
+          # https://github.com/actions/boost-versions/blob/main/versions-manifest.json
+          boost_version: 1.73.0
+          toolset: msvc14.2
+          boost_install_dir: 'C:/'
+
+      - name: Start build
+        env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+        run: |
+          echo "Using Supported OpenSSL Version Below"
+          echo "https://slproweb.com/products/Win32OpenSSL.html"
+          curl -LO https://slproweb.com/download/Win64OpenSSL-1_1_1k.exe
+          powershell ".\\Win64OpenSSL-1_1_1k.exe /silent /sp- /suppressmsgboxes /DIR='C:\\Program Files\\OpenSSL-Win64'"
+          git clone https://github.com/trojan-gfw/trojan && cd trojan
+          mkdir -p Release && git checkout ${{ env.VERSION }}
+          cmake -DBoost_INCLUDE_DIR="${BOOST_ROOT}/include" -DBoost_USE_STATIC_LIBS=ON -DOPENSSL_ROOT_DIR='C:/Program Files/OpenSSL-Win64' -DOPENSSL_USE_STATIC_LIBS=ON -DENABLE_MYSQL=OFF .
+          cmake --build . --config Release
+        shell : bash
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          name: ${{ env.RELEASE_VERSION }}
+          tag_name: ${{ env.RELEASE_VERSION }}
+          draft: false
+          prerelease: false
+          files: |
+            ./trojan/Release/*
+
   push:
     runs-on: ubuntu-20.04
     steps:
