--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -1,9 +1,9 @@
 on:
   push:
     paths:
-      - 'version/naive.txt'
+      - 'version/caddy.txt'
 
-name: naive
+name: caddy
 jobs:
   build:
     runs-on: ubuntu-20.04
@@ -15,7 +15,7 @@ jobs:
       - name: Setup variables
         run: |
           echo "GOLANG=$(wget -qO- https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | grep 'version' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
-          echo "VERSION=$(cat "version/naive.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/caddy.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
           echo "GOPATH=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
           echo "$(dirname $GITHUB_WORKSPACE)/bin" >> $GITHUB_PATH
         shell: bash
@@ -51,12 +51,12 @@ jobs:
       
       - name: Setup variables
         run: |
-          echo "VERSION=$(cat "version/naive.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/caddy.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Get Dockerfile
         run: |
-          cp src/naive/* $PWD
+          cp src/caddy/* $PWD
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1.2.0
@@ -90,7 +90,7 @@ jobs:
       
       - name: Setup variables
         run: |
-          echo "VERSION=$(cat "version/naive.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/caddy.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Test Docker image
