--- a/.github/workflows/naiveproxy.yml
+++ b/.github/workflows/naiveproxy.yml
@@ -1,17 +1,20 @@
 on:
   push:
     paths:
-      - 'version/naive-client.txt'
+      - 'version/naiveproxy.txt'
+defaults:
+  run:
+    shell: bash
 
-name: naive-client
+name: naiveproxy
 jobs:
-  build:
+  build-linux:
     strategy:
       matrix:
         cpu: [x86, x64, arm, arm64]
       fail-fast: false
 
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     env:
       EXTRA_FLAGS: target_cpu="${{ matrix.cpu }}"
     steps:
@@ -21,15 +24,19 @@ jobs:
       
       - name: Set variables
         run: |
-          echo "VERSION=$(cat "version/naive-client.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/naiveproxy.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "NAIVE=$(wget -qO- https://api.github.com/repos/klzgrad/naiveproxy/tags | grep 'name' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
         shell: bash
 
       - name: Build
         run: |
           sudo apt update
-          sudo apt install -y git curl unzip ccache python-minimal ninja-build qemu-user pkg-config libnss3-dev
-          NAIVE=$(wget -qO- https://api.github.com/repos/klzgrad/naiveproxy/tags | grep 'name' | cut -d\" -f4 | head -1)
-          git clone -b ${NAIVE} https://github.com/klzgrad/naiveproxy.git
+          sudo apt install -y ninja-build pkg-config qemu-user ccache
+          sudo apt purge -y libc6-i386
+          git clone https://github.com/klzgrad/naiveproxy naiveproxy
+          pushd naiveproxy || exit 1
+          git checkout ${{ env.NAIVE }}
+          popd || exit 1
           pushd naiveproxy/src || exit 1
           chmod +x *.sh
           ./get-clang.sh
@@ -69,8 +76,79 @@ jobs:
           files: |
             ./release/*
 
+  build-windows:
+    strategy:
+      matrix:
+        cpu: [x86, x64, arm64]
+      fail-fast: false
+
+    runs-on: windows-latest
+    env:
+      EXTRA_FLAGS: target_cpu="${{ matrix.cpu }}"
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+
+      - name: Install wget
+        run: |
+          powershell "choco install wget"
+
+      - name: Install ninja
+        uses: seanmiddleditch/gha-setup-ninja@master
+        with:
+          destination: ~/bin/ninja.exe
+
+      - name: Set variables
+        run: |
+          echo "VERSION=$(cat "version/naiveproxy.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "NAIVE=$(wget -qO- https://api.github.com/repos/klzgrad/naiveproxy/tags | grep 'name' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Build
+        run: |
+          git clone https://github.com/klzgrad/naiveproxy naiveproxy
+          pushd naiveproxy || exit 1
+          git checkout ${{ env.NAIVE }}
+          popd || exit 1
+          pushd naiveproxy/src || exit 1
+          chmod +x *.sh
+          ./get-clang.sh
+          ./build.sh
+          popd || exit 1
+
+      - name: Ready to release
+        run: |
+          mkdir -p release
+          case ${{ matrix.cpu }} in
+            x86)
+              mv naiveproxy/src/out/Release/naive release/naive-windows-386.exe
+              ;;
+            x64)
+              mv naiveproxy/src/out/Release/naive release/naive-windows-amd64.exe
+              ;;
+            arm64)
+              mv naiveproxy/src/out/Release/naive release/naive-windows-arm64.exe
+              ;;
+            *)
+              echo "Error occured" && exit 1
+              ;;
+          esac
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          name: ${{ env.VERSION }}
+          tag_name: ${{ env.VERSION }}
+          draft: false
+          prerelease: false
+          files: |
+            ./release/*
+
   push:
-    needs: build
+    needs: build-linux
     runs-on: ubuntu-20.04
     steps:
 
@@ -79,12 +157,12 @@ jobs:
       
       - name: Set variables
         run: |
-          echo "VERSION=$(cat "version/naive-client.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/naiveproxy.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Get Dockerfile
         run: |
-          cp src/naive-client/* $PWD
+          cp src/naiveproxy/* $PWD
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1.2.0
@@ -109,7 +187,7 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/naiveproxy:${{ env.VERSION }}
            
   test:
-     needs: [build,push]
+     needs: [build-linux,push]
      runs-on: ubuntu-20.04
      steps:
        
@@ -118,7 +196,7 @@ jobs:
       
       - name: Setup variables
         run: |
-          echo "VERSION=$(cat "version/naive-client.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/naiveproxy.txt" | head -n1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
       - name: Test Docker image
