--- a/src/caddy/Dockerfile
+++ b/src/caddy/Dockerfile
@@ -2,16 +2,16 @@ FROM --platform=${TARGETPLATFORM} alpine:latest
 
 WORKDIR /root
 ARG TARGETPLATFORM
-COPY naive.sh /root/naive.sh
+COPY caddy.sh /root/caddy.sh
 COPY Caddyfile /etc/naiveproxy/Caddyfile
 COPY config.json /etc/naiveproxy/config.json
 
 RUN set -ex \
 	&& apk add --no-cache tzdata ca-certificates \
 	&& mkdir -p /var/www/html /var/log/naiveproxy \
-	&& chmod +x /root/naive.sh \
-	&& /root/naive.sh "${TARGETPLATFORM}" \
-	&& rm -fv /root/naive.sh
+	&& chmod +x /root/caddy.sh \
+	&& /root/caddy.sh "${TARGETPLATFORM}" \
+	&& rm -fv /root/caddy.sh
 
 ARG PATH
 VOLUME /etc/naiveproxy
