--- a/.github/workflows/gitea.yml
+++ b/.github/workflows/gitea.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2.2.0
         with:
-          node-version: '15.x'
+          node-version: '16'
           check-latest: true
 
       - name: Start build
