change to yt-dlp

--- a/.github/workflows/youtube-dl.yml
+++ b/.github/workflows/youtube-dl.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup variables
         run: |
           echo "FFMPEG=$(wget -qO- https://api.github.com/repos/BtbN/FFmpeg-Builds/tags | grep 'name' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
-          echo "YOUDL=$(wget -qO- https://api.github.com/repos/ytdl-org/youtube-dl/tags | grep 'name' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
+          echo "YOUDL=$(wget -qO- https://api.github.com/repos/yt-dlp/yt-dlp/tags | grep 'name' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
           echo "VERSION=$(cat "version/youtube-dl.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
         shell: bash
 
@@ -29,7 +29,7 @@ jobs:
           popd || exit 1
           mkdir -p release
           pushd release || exit 1
-          wget -O youtube-dl.exe https://github.com/ytdl-org/youtube-dl/releases/download/${{ env.YOUDL }}/youtube-dl.exe
+          wget -O youtube-dl.exe https://github.com/yt-dlp/yt-dlp/releases/download/${{ env.YOUDL }}/yt-dlp.exe
           ARIA2=$(wget -qO- https://api.github.com/repos/aria2/aria2/releases/latest | jq ".assets[] | {name}" -c | jq .name -r | grep "win-64bit" | sed "s/.zip//g")
           wget -qO- https://api.github.com/repos/aria2/aria2/releases/latest | jq ".assets[] | {browser_download_url}" -c | jq .browser_download_url -r | grep "win-64bit" | wget -O aria2.zip -q -i -
           unzip -qq aria2.zip && mv ${ARIA2}/aria2c.exe .
