--- a/.github/workflows/v2ray.yml
+++ b/.github/workflows/v2ray.yml
@@ -93,5 +93,5 @@ jobs:
 
       - name: Test Docker image
         run: |
-          docker run --rm --entrypoint /usr/bin/v2ray ${{ secrets.DOCKER_USERNAME }}/v2ray:latest -version
-          docker run --rm --entrypoint /usr/bin/v2ray ${{ secrets.DOCKER_USERNAME }}/v2ray:${{ env.VERSION }} -version
+          docker run --rm --entrypoint /usr/bin/v2ray ${{ secrets.DOCKER_USERNAME }}/v2ray:latest version
+          docker run --rm --entrypoint /usr/bin/v2ray ${{ secrets.DOCKER_USERNAME }}/v2ray:${{ env.VERSION }} version
