--- a/.github/workflows/youtube-dl.yml
+++ b/.github/workflows/youtube-dl.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           mkdir -p ffmpeg
           pushd ffmpeg || exit 1
-          wget -qO- https://api.github.com/repos/BtbN/FFmpeg-Builds/releases/tags/${FFMPEG} | jq ".assets[] | {browser_download_url}" -c | jq .browser_download_url -r | grep -E ".ffmpeg-n.*.-gpl-[[:digit:]].[[:digit:]].zip" | wget -O ffmpeg.zip -i -
+          wget -qO- https://api.github.com/repos/BtbN/FFmpeg-Builds/releases/tags/${FFMPEG} | jq ".assets[] | {browser_download_url}" -c | jq .browser_download_url -r | grep -E ".ffmpeg-n.*.-gpl-[[:digit:]].[[:digit:]].zip" | sort -r | head -1 | wget -O ffmpeg.zip -i -
           unzip ffmpeg.zip
           mv ffmpeg-*/bin/*.exe .
           popd || exit 1
