--- a/.github/workflows/naiveproxy.yml
+++ b/.github/workflows/naiveproxy.yml
@@ -82,7 +82,7 @@ jobs:
         cpu: [x86, x64, arm64]
       fail-fast: false
 
-    runs-on: windows-latest
+    runs-on: windows-2019
     env:
       EXTRA_FLAGS: target_cpu="${{ matrix.cpu }}"
     steps:
