--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -41,6 +41,42 @@ jobs:
           files: |
             ./release/*
 
+  build-uot:
+    runs-on: ubuntu-20.04
+    steps:
+      
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup variables
+        run: |
+          echo "GOLANG=$(wget -qO- https://raw.githubusercontent.com/actions/go-versions/main/versions-manifest.json | grep 'version' | cut -d\" -f4 | head -1)" >> $GITHUB_ENV
+          echo "VERSION=$(cat "version/caddy.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+          echo "GOPATH=$(dirname $GITHUB_WORKSPACE)" >> $GITHUB_ENV
+          echo "$(dirname $GITHUB_WORKSPACE)/bin" >> $GITHUB_PATH
+        shell: bash
+
+      - name: Install Golang
+        uses: actions/setup-go@v2
+        with: 
+          go-version: ${{ env.GOLANG }}
+
+      - name: Start build
+        run: |
+          cp src/build/caddy-uot.sh $PWD/caddy-uot.sh && chmod +x caddy-uot.sh && ./caddy-uot.sh
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          name: ${{ env.VERSION }}
+          tag_name: ${{ env.VERSION }}
+          draft: false
+          prerelease: false
+          files: |
+            ./release/*
+
   push:
     needs: build
     runs-on: ubuntu-20.04
@@ -80,8 +116,47 @@ jobs:
             ${{ secrets.DOCKER_USERNAME }}/naiveproxy:latest
             ${{ secrets.DOCKER_USERNAME }}/naiveproxy:${{ env.VERSION }}
 
+    push-uot:
+    needs: build-uot
+    runs-on: ubuntu-20.04
+    steps:
+      
+      - name: Checkout
+        uses: actions/checkout@v3
+      
+      - name: Setup variables
+        run: |
+          echo "VERSION=$(cat "version/caddy.txt" | head -1 | tr -d [:space:])" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Get Dockerfile
+        run: |
+          cp src/caddy-uot/* $PWD
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1.14.1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build latest
+        uses: docker/build-push-action@v2.10.0
+        with:
+          context: .
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          push: true
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/naiveproxy:latest-uot
+            ${{ secrets.DOCKER_USERNAME }}/naiveproxy:${{ env.VERSION }}-uot
+
   test:
-    needs: push
+    needs: [push,push-uot]
     runs-on: ubuntu-20.04
     steps:
       
@@ -97,3 +172,5 @@ jobs:
         run: |
           docker run --rm --entrypoint /usr/bin/caddy ${{ secrets.DOCKER_USERNAME }}/naiveproxy:latest version
           docker run --rm --entrypoint /usr/bin/caddy ${{ secrets.DOCKER_USERNAME }}/naiveproxy:${{ env.VERSION }} version
+          docker run --rm --entrypoint /usr/bin/caddy ${{ secrets.DOCKER_USERNAME }}/naiveproxy:latest-uot version
+          docker run --rm --entrypoint /usr/bin/caddy ${{ secrets.DOCKER_USERNAME }}/naiveproxy:${{ env.VERSION }}-uot version
