--- a/.github/workflows/naiveproxy.yml
+++ b/.github/workflows/naiveproxy.yml
@@ -31,10 +31,14 @@ jobs:
       - name: Build
         run: |
           sudo apt update
-          sudo apt install -y ninja-build pkg-config qemu-user ccache
+          sudo apt install -y ninja-build pkg-config qemu-user ccache bubblewrap
           sudo apt purge -y libc6-i386
+          sudo apt purge -y qemu-user-binfmt
+          wget "https://snapshot.debian.org/archive/debian/20220515T152741Z/pool/main/q/qemu/qemu-user-static_7.0%2Bdfsg-6_amd64.deb" -O qemu-user-static.deb
+          sudo dpkg -i qemu-user-static.deb
           git clone https://github.com/klzgrad/naiveproxy naiveproxy
           pushd naiveproxy || exit 1
+          echo "version is ${{ env.NAIVE }}"
           git checkout ${{ env.NAIVE }}
           popd || exit 1
           pushd naiveproxy/src || exit 1
@@ -42,25 +46,44 @@ jobs:
           ./get-clang.sh
           ./build.sh
           popd || exit 1
+          pushd naiveproxy/src/out/Release/cronet || exit 1
+          chmod +x *.sh
+          CCACHE_DISABLE=1 ./go-build.sh
+          popd || exit 1
 
       - name: Ready to release
         run: |
-          mkdir -p release
+          mkdir -p release 7zip
+          wget "https://www.7-zip.org/a/7z2107-linux-x64.tar.xz" -O 7zip/7zip.tar.xz
+          tar -xvf 7zip/7zip.tar.xz -C 7zip/ && mv 7zip/7zz .
+          rm -rf 7zip && chmod +x 7zz
           case ${{ matrix.cpu }} in
             x86)
               mv naiveproxy/src/out/Release/naive release/naive-linux-386
+              mv naiveproxy/src/out/Release/cronet release/naive-cronet-linux-386
+              ./7zz a -m0=lzma2 -mx9 release/naive-cronet-linux-386.7z release/naive-cronet-linux-386
+              rm -rf release/naive-cronet-linux-386
               ;;
             x64)
               mv naiveproxy/src/out/Release/naive release/naive-linux-amd64
+              mv naiveproxy/src/out/Release/cronet release/naive-cronet-linux-amd64
+              ./7zz a -m0=lzma2 -mx9 release/naive-cronet-linux-amd64.7z release/naive-cronet-linux-amd64
+              rm -rf release/naive-cronet-linux-amd64
               ;;
             arm)
               mv naiveproxy/src/out/Release/naive release/naive-linux-arm32-v7
+              mv naiveproxy/src/out/Release/cronet release/naive-cronet-linux-arm32-v7
+              ./7zz a -m0=lzma2 -mx9 release/naive-cronet-linux-arm32-v7.7z release/naive-cronet-linux-arm32-v7
+              rm -rf release/naive-cronet-linux-arm32-v7
               ;;
             arm64)
               mv naiveproxy/src/out/Release/naive release/naive-linux-arm64
+              mv naiveproxy/src/out/Release/cronet release/naive-cronet-linux-arm64
+              ./7zz a -m0=lzma2 -mx9 release/naive-cronet-linux-arm64.7z release/naive-cronet-linux-arm64
+              rm -rf release/naive-cronet-linux-arm64
               ;;
             *)
-              echo "Error occured" && exit 1
+              echo "Error occurred" && exit 1
               ;;
           esac
 
@@ -109,12 +132,17 @@ jobs:
         run: |
           git clone https://github.com/klzgrad/naiveproxy naiveproxy
           pushd naiveproxy || exit 1
+          echo "version is ${{ env.NAIVE }}"
           git checkout ${{ env.NAIVE }}
           popd || exit 1
           pushd naiveproxy/src || exit 1
           chmod +x *.sh
           ./get-clang.sh
           ./build.sh
+          popd || exit 1
+          pushd naiveproxy/src/out/Release/cronet || exit 1
+          chmod +x *.sh
+          CCACHE_DISABLE=1 ./go-build.sh
           popd || exit 1
 
       - name: Ready to release
@@ -123,15 +151,24 @@ jobs:
           case ${{ matrix.cpu }} in
             x86)
               mv naiveproxy/src/out/Release/naive release/naive-windows-386.exe
+              mv naiveproxy/src/out/Release/cronet release/naive-cronet-windows-386
+              7z a -m0=lzma2 -mx9 release/naive-cronet-windows-386.7z release/naive-cronet-windows-386
+              rm -rf release/naive-cronet-windows-386
               ;;
             x64)
               mv naiveproxy/src/out/Release/naive release/naive-windows-amd64.exe
+              mv naiveproxy/src/out/Release/cronet release/naive-cronet-windows-amd64
+              7z a -m0=lzma2 -mx9 release/naive-cronet-windows-amd64.7z release/naive-cronet-windows-amd64
+              rm -rf release/naive-cronet-windows-amd64
               ;;
             arm64)
               mv naiveproxy/src/out/Release/naive release/naive-windows-arm64.exe
+              mv naiveproxy/src/out/Release/cronet release/naive-cronet-windows-arm64
+              7z a -m0=lzma2 -mx9 release/naive-cronet-windows-arm64.7z release/naive-cronet-windows-arm64
+              rm -rf release/naive-cronet-windows-arm64
               ;;
             *)
-              echo "Error occured" && exit 1
+              echo "Error occurred" && exit 1
               ;;
           esac
 
