--- a/.github/workflows/ss-rust.yml
+++ b/.github/workflows/ss-rust.yml
@@ -109,15 +109,15 @@ jobs:
           mv prepare/ss-rust-linux-${ARCH}.zip release/
 
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           name: ${{ env.VERSION }}
-          tag_name: ${{ env.VERSION }}
+          tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
-          files: |
+          artifacts: |
             ./release/*
 
   push:
