--- a/.github/workflows/tuic.yml
+++ b/.github/workflows/tuic.yml
@@ -66,15 +66,15 @@ jobs:
           mv tuic/target/${TARGET}/release/tuic-server release/tuic-linux-${ARCH}
 
       - name: Release
-        uses: softprops/action-gh-release@v1
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           name: ${{ env.VERSION }}
-          tag_name: ${{ env.VERSION }}
+          tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
-          files: |
+          artifacts: |
             ./release/*
 
   push:
