--- a/.github/workflows/naiveproxy.yml
+++ b/.github/workflows/naiveproxy.yml
@@ -105,7 +105,7 @@ jobs:
           artifacts: |
             ./release/*
 
-  build-windows:ubuntu-22.04
+  build-windows:
     strategy:
       matrix:
         cpu: [x86, x64, arm64]
