--- a/.github/workflows/naiveproxy.yml
+++ b/.github/workflows/naiveproxy.yml
@@ -102,6 +102,7 @@ jobs:
           tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
+          allowUpdates: true
           artifacts: |
             ./release/*
 
@@ -193,6 +194,7 @@ jobs:
           tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
+          allowUpdates: true
           artifacts: |
             ./release/*
 
