--- a/.github/workflows/ss-rust.yml
+++ b/.github/workflows/ss-rust.yml
@@ -118,6 +118,7 @@ jobs:
           tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
+          allowUpdates: true
           artifacts: |
             ./release/*
 
