--- a/.github/workflows/caddy.yml
+++ b/.github/workflows/caddy.yml
@@ -38,6 +38,7 @@ jobs:
           tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
+          allowUpdates: true
           artifacts: |
             ./release/*
 
@@ -74,6 +75,7 @@ jobs:
           tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
+          allowUpdates: true
           artifacts: |
             ./release/*
 
