--- a/.github/workflows/tuic.yml
+++ b/.github/workflows/tuic.yml
@@ -74,6 +74,7 @@ jobs:
           tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
+          allowUpdates: true
           artifacts: |
             ./release/*
 
