--- a/.github/workflows/trojan-go.yml
+++ b/.github/workflows/trojan-go.yml
@@ -36,6 +36,7 @@ jobs:
           tag: ${{ env.VERSION }}
           draft: false
           prerelease: false
+          allowUpdates: true
           artifacts: |
             ./release/*
 
