--- a/.github/workflows/ss-rust.yml
+++ b/.github/workflows/ss-rust.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install Golang
         uses: actions/setup-go@v4
         with: 
-          go-version: ${{ env.GOLANG }}
+          go-version: 1.20.4
 
       - name: Install cross
         run: |
